# Agent_cognitive

./: README.md  cognitive_memory.db  demo_team.db  pyproject.toml  requirements.txt  score.md  seed_data.py
cognitive_memory/: __init__.py  cognitive_memory.db
cognitive_memory/admin/: __init__.py  server.py
cognitive_memory/admin/static/: app.js  index.html  style.css
cognitive_memory/api/: __init__.py  routes.py
cognitive_memory/core/: __init__.py  cold_start.py  context_engine.py  memory_manager.py  permission.py  privacy.py  user_profile_builder.py
cognitive_memory/learner/: __init__.py  memory_decay.py  pattern_learner.py
cognitive_memory/models/: __init__.py  document_context.py  memory.py  team_memory.py
cognitive_memory/storage/: __init__.py  base.py  long_term.py  short_term.py  team_store.py
cognitive_memory/tests/: __init__.py  conftest.py  test_benchmark.py  test_features.py  test_integration.py  test_memory.py  test_performance_optimization.py  test_security.py  test_ux.py
